--- a/index.html
+++ b/index.html
@@ -2,40 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Galaxy Info</title>
+  <title>Galaxy Wiki Finder</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #0b0b2a; color: white; }
+    body { font-family: sans-serif; background: #0b0b2a; color: white; padding: 2rem; }
     input, button { padding: 0.5rem; font-size: 1rem; }
+    #jsonResult { background: #1e1e3f; padding: 0.5rem; margin-top: 1rem; font-family: monospace; white-space: pre-wrap; }
   </style>
 </head>
 <body>
-  <h1>Galaxy Constellation Finder</h1>
+  <h1>Galaxy Wiki Finder</h1>
   <input id="galaxyInput" placeholder="Enter galaxy name" />
-  <button onclick="fetchGalaxy()">Search</button>
+  <button onclick="searchWiki()">Search</button>
 
-  <h2 id="galaxyName"></h2>
-  <p id="constellation"></p>
+  <h2>Result:</h2>
+  <p id="result"></p>
+  <div id="jsonResult"></div>
 
   <script>
-    async function fetchGalaxy() {
-      const galaxy = document.getElementById("galaxyInput").value;
-      document.getElementById("galaxyName").innerText = galaxy;
-      document.getElementById("constellation").innerText = "Searching Wikipedia...";
+    async function searchWiki() {
+      const name = document.getElementById("galaxyInput").value.trim();
+      const resultBox = document.getElementById("result");
+      const jsonBox = document.getElementById("jsonResult");
+
+      if (!name) {
+        resultBox.textContent = "Please enter a galaxy name.";
+        jsonBox.textContent = "";
+        return;
+      }
+
+      resultBox.textContent = "Searching Wikipedia...";
+      jsonBox.textContent = "";
 
       try {
-        const response = await fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(galaxy)}`);
+        const response = await fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(name)}`);
         const data = await response.json();
-        const content = data.extract;
+        const extract = data.extract || "";
 
-        const match = content.match(/in the constellation ([A-Za-z\s]+)/i);
-        if (match) {
-          document.getElementById("constellation").innerText = `Constellation: ${match[1]}`;
-        } else {
-          document.getElementById("constellation").innerText = "Constellation not found in summary.";
-        }
-      } catch (error) {
-        document.getElementById("constellation").innerText = "Failed to fetch data.";
+        const match = extract.match(/in the constellation ([A-Za-z\s]+)/i);
+        const constellation = match ? match[1].trim() : "Unknown";
+
+        resultBox.textContent = `${name} is in the constellation ${constellation}.`;
+
+        jsonBox.textContent = `{"name": "${name}", "constellation": "${constellation}"}`;
+      } catch (e) {
+        resultBox.textContent = "Error: Unable to fetch data.";
+        console.error(e);
       }
     }
   </script>
