--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Astro File Explorer</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- JS9 CSS & JS (CDN) -->
-  <link rel="stylesheet" href="https://js9.si.edu/js9/css/js9.css" />
-  <script src="https://js9.si.edu/js9/js9min.js"></script>
+  <!-- fitsjs library -->
+  <script src="https://unpkg.com/fitsjs/dist/browser/fits.min.js"></script>
 </head>
 <body>
   <header class="topbar">
@@ -34,8 +33,8 @@
           <div id="viewerControls" class="viewer-controls">
             <span id="fileInfo">No file loaded</span>
           </div>
-          <!-- JS9 rendering element -->
-          <div id="JS9" class="JS9" style="width:100%; height:600px;"></div>
+          <!-- Canvas for FITS rendering -->
+          <canvas id="fitsCanvas" style="width:100%; height:auto; background:black;"></canvas>
         </div>
       </div>
     </section>
