--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Astro File Explorer</title>
   <link rel="stylesheet" href="styles.css" />
   <!-- fitsjs library -->
-  <script src="https://unpkg.com/fitsjs/dist/browser/fits.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fitsjs@latest/dist/fits.min.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
   <header class="topbar">
